# kern

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FEATURE-AUDIT.md  FEATURES.md  ORACLE.md  README.md  ROADMAP.md  SPECIALISTS.md  VISION.md  __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._head.txt  __next._index.txt  __next._tree.txt  aspiration.md  decisions.txt  index.html  index.txt  install.ps1  install.sh  justfile  llms.txt  mkdocs.yml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  docs-check.yml  docs.yml  pages.yml  release.yml
.kern/: kern.toml
.pi/: update.sh
.proj/: improve.json
.splinter/src/: base.splinter.md  commands.splinter.md  crdt.splinter.md  lib.splinter.md  llm.splinter.md  main.splinter.md  mcp.splinter.md  profile.splinter.md  quant.splinter.md  retrieval.splinter.md  store.splinter.md  test_support.splinter.md  tick.splinter.md  types.splinter.md  wire.splinter.md
_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt  index.html
api/: search
benches/: bench.rs  retrieval_trace_bench.rs
concepts/: acceptance.txt  architecture.txt  federation.txt  graph.txt  heat-and-compaction.txt  retrieval.txt  security.txt  stigmergy.txt  time.txt  why-kern.txt
concepts/acceptance/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next.!KGRvY3Mp.$oc$slug.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
concepts/architecture/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
concepts/federation/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  index.html
concepts/graph/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  index.html
concepts/heat-and-compaction/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
concepts/retrieval/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
concepts/security/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
concepts/stigmergy/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  index.html
concepts/time/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  index.html
concepts/why-kern/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
cycle/: slice.md
decisions/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._head.txt  __next._tree.txt  bayesian-confidence.txt  crdts-over-consensus.txt  diskann-spill.txt  edit-convergence.txt  index.html  index.txt  knowledge-not-gradients.txt  pagerank-authority.txt  stigmergy-over-gardening.txt
decisions/bayesian-confidence/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
decisions/crdts-over-consensus/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
decisions/diskann-spill/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
decisions/edit-convergence/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next.!KGRvY3Mp.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
decisions/knowledge-not-gradients/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
decisions/pagerank-authority/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
decisions/stigmergy-over-gardening/: __next.!KGRvY3Mp.$oc$slug.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  index.html
docker/: Dockerfile  docker-compose.yml
docs/: ALOIS-INTEGRATION-PLAN.md  FEDERATION-SECURITY.md  aspiration.md  federation-integration-plan.md  federation-roadmap.md  landscape.md  requirements.txt  v2.md  vision.md
docs/book/: book.toml  flows.toml
docs/kern/: README.md  bayesian-belief.md  bench-retrieval.md  board-unblock-plan.md  crdts-federation.md  diskann-disk-index.md  edge-seeding-equivalence-1k.md  eval-locomo.md  fl-vs-knids-federation.md  locomo-baseline-2026-07-19.json  locomo-improvements.md  pagerank-authority.md  safety-architecture.md  stigmergy-self-improving.md  vllm.md  wikipedia-edit-convergence.md
e2e/: conftest.py  fake_llm.py  hub_supervisor.rs  ranking.py  test_file_watcher_durability.py  test_gnn_recall.py  test_graviton_routing.py  test_health_surface.py  test_hub.py  test_invariants.py  test_llm_failure_channel.py  test_recall.py  test_retention.py  test_retrieval.py
ghpages/: README.md  index.html
hooks/: README.md  kern-capture.mjs  kern-recall-prompt.mjs  kern-recall.mjs  pre-commit
howto/: configure.txt  install-run.txt  intake-recall.txt  mcp.txt  memory-bank.txt  seed.txt
scripts/: answer_bench.py  distill_bench.py  docs_check.py  embed_bench.py  gen_trace.py  insight.py
src/: base.rs  commands.rs  crdt.rs  lib.rs  llm.rs  main.rs  mcp.rs  memory_service.rs  metrics.rs  profile.rs  quant.rs  repl.rs  retrieval.rs  store.rs  takeover.rs  test_support.rs  tick.rs  types.rs  viewer.rs  wire.rs
src/base/: cold.rs  (+25 more)
src/trnsprt/: Cargo.toml  README.md
src/trnsprt/macros/src/: lib.rs
src/trnsprt/src/: client.rs  error.rs  http.rs  inproc.rs  lib.rs  registry.rs  server.rs  transport.rs  types.rs
src/trnsprt/src/hub_rpc/: client.rs  dto.rs  mod.rs  svc.rs
src/trnsprt/src/kern_rpc/: auth.rs  client_local.rs  dto.rs  mock.rs  mod.rs  svc.rs
src/trnsprt/src/search/: dto.rs  mock.rs  mod.rs  svc.rs
src/trnsprt/src/typed/: adapter.rs  channel.rs  codec.rs  error.rs  local.rs  mod.rs
src/trnsprt/tests/: integration.rs  kern_rpc.rs  search_rpc.rs
src/trnsprt/tests/common/: mod.rs
tests/: depth_bias.rs  docs_check.py  gc_scale.rs  gnn_scale.rs  multi_store.rs  route_fanout.rs  seed_scale.rs  spill_memory.rs  spill_transparency.rs
viewer/: index.html  package-lock.json  package.json  vite.config.js
(+568 files in other folders)
