[workspace]
resolver = "2"
members = [
    "src/config-io",
    "src/log",
    "src/trnsprt",
    "src/trnsprt/macros",
    "src/watcher",
    "src/test-utils",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.82"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
bincode = { version = "2", features = ["serde"] }
sha2 = "0.11"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
axum = "0.8.9"
rayon = "1.12"
trnsprt-macros = { path = "src/trnsprt/macros" }
toml = "0.8"
unicode-segmentation = "1"
unicode-width = "0.2"
parking_lot = "0.12"

[workspace.lints.rust]
warnings = "deny"
dead_code = "warn"
unused_imports = "warn"

[package]
name = "kern"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
bench = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "kern"
path = "src/main.rs"

[[bin]]
name = "retrieval_bench"
path = "src/bin/retrieval_bench.rs"
required-features = ["bench"]

[[bin]]
name = "locomo_eval"
path = "src/bin/locomo_eval.rs"
required-features = ["bench"]

[dependencies]
config-io = { path = "src/config-io" }
dirs = "6"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
serde.workspace = true
rand.workspace = true
bincode.workspace = true
thiserror.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
sha2.workspace = true
axum.workspace = true
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tracing-subscriber.workspace = true
tracing.workspace = true
trnsprt = { path = "src/trnsprt" }
watcher = { path = "src/watcher" }
async-trait = "0.1"
heed = "0.20"
anyhow.workspace = true
zstd = "0.13"
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console", "Win32_Foundation"] }

[lints]
workspace = true
