[package]
name = "trnsprt"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Transport boundary: MCP server + typed-RPC stack (Adapter/Codec/Channel)."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
axum = { workspace = true }
async-stream = "0.3"
bincode = { workspace = true }
trnsprt-macros = { workspace = true }

# Only for `geteuid`: a client must know whose socket it is about to talk to,
# and std exposes the owner of a *file* but never the identity of this process.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Only to spell the Unix `0600` on kern.sock the way Windows spells it: a
# named pipe has no mode bits, so owner-only is a security descriptor.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
